FIX: Fixed an issue when billboard was displayed off-center when changing screen length

--- a/src/pages/index/less/billboard.less
+++ b/src/pages/index/less/billboard.less
@@ -11,6 +11,7 @@
 	box-shadow: 0 3px 8px 0 inset rgba(255, 255, 255, 0.2);
 }
 .billboard-block {
+	justify-content: center;
 	padding: 25px;
 	display: flex;
 	column-gap: 90px;
